--- a/portfolio.html
+++ b/portfolio.html
@@ -14,24 +14,24 @@
 </head>
 <body>
    <header class="page-header">
-      <div class="container page-header-container">
-         <nav class="header__info-first">
+      <div class="container page-header__container">
+         <nav class="page-header__info-nav">
             <a class="logo link" href="./index.html"><b style="color:#2196F3">Web<span style="color:#000000;">Studio</span></b></a>
-            <ul class="header__site-nav">
-               <li class="list header__site-nav-item"><a class="link studio" href="./index.html">Студия</a></li>
-               <li class="list header__site-nav-item"><a class="link portfolio current" href="./portfolio.html">Портфолио</a></li>
-               <li class="list header__site-nav-item"><a class="link contact" href="#contacts">Контакты</a></li>
+            <ul class="menu__list">
+               <li class="list menu__list-item"><a class="link menu__list-item-studio " href="./index.html">Студия</a></li>
+               <li class="list menu__list-item"><a class="link menu__list-item-portfolio current" href="./portfolio.html">Портфолио</a></li>
+               <li class="list menu__list-item"><a class="link menu__list-item-contact" href="#contacts">Контакты</a></li>
             </ul>
          </nav>   
-         <div class="header__contact">
-            <a class="header__info-first link email grey" href="mailto:info@devstudio.com">
-               <svg class="header__contact-icon" width="16" height="12">
+         <div class="page-header__contact">
+            <a class="page-header__contact-email link grey" href="mailto:info@devstudio.com">
+               <svg class="page-header__contact-icon" width="16" height="12">
                <use
                   href="./images/symbol-defs.svg#icon-envelope"
                ></use>
                </svg>info@devstudio.com</a>
-            <a class="header__info-first link telephone grey" href="tel:+380961111111">
-               <svg class="header__contact-icon" width="10" height="16">
+            <a class="page-header__contact-telephone link grey" href="tel:+380961111111">
+               <svg class="page-header__contact-icon" width="10" height="16">
                   <use
                      href="./images/symbol-defs.svg#icon-telephone"
                   ></use>
