--- a/index.html
+++ b/index.html
@@ -134,11 +134,11 @@
             </ul>
          </div>   
       </section>
-      <section class="main__information-teachers section">
+      <section class="teachers section">
          <div class="container">
             <h2 class="work">Наша команда</h2>
-            <ul class="main__information-teachers-photo">
-               <li class="list block">
+            <ul class="teachers__list">
+               <li class="list teachers__item">
                   <img src="./images/img-3.jpg" alt="человек в очках улыбается" width="270" >
                   <div class="workers-names-type">
                      <h3 class="workers title">Игорь Демьяненко</h3>
@@ -194,7 +194,7 @@
                     </ul>
                   </div>
                </li>
-               <li class="list block"> 
+               <li class="list teachers__item"> 
                   <img src="./images/img-2.jpg" alt="женщина в очках" width="270" >
                   <div class="workers-names-type">
                      <h3 class="workers title">Ольга Репина</h3>
@@ -250,7 +250,7 @@
                     </ul>
                   </div>
                </li>
-               <li class="list block">
+               <li class="list teachers__item">
                   <img src="./images/img-1.jpg" alt="человек  улыбается" width="270">
                   <div class="workers-names-type">
                      <h3 class="workers title">Николай Тарасов</h3>
@@ -306,7 +306,7 @@
                     </ul>
                   </div>          
                </li>   
-               <li class="list block">
+               <li class="list teachers__item">
                   <img src="./images/img.jpg" alt="человек в очках улыбается" width="270" >
                   <div class="workers-names-type">
                      <h3 class="workers title">Михаил Ермаков</h3>
