teachers bem complited

--- a/index.html
+++ b/index.html
@@ -140,51 +140,51 @@
             <ul class="teachers__list">
                <li class="list teachers__item">
                   <img src="./images/img-3.jpg" alt="человек в очках улыбается" width="270" >
-                  <div class="workers-names-type">
-                     <h3 class="workers title">Игорь Демьяненко</h3>
+                  <div class="teachers__item-names">
+                     <h3 class="teachers__item-names-title title">Игорь Демьяненко</h3>
                      <p class="grey workers" lang="en">Product Designer</p>              
-                     <ul class="teachers-socials-list list">
-                        <li class="teachers-socials-item">
+                     <ul class="teachers__socials-list list">
+                        <li class="teachers__socials-item">
                             <a
                                 href=""
-                                class="teachers-socials-link link"
+                                class="teachers__socials-link link"
                             >
-                                <svg class="teachers-socials-icon" width="20" height="20">
+                                <svg class="teachers__socials-icon" width="20" height="20">
                                     <use
                                         href="./images/symbol-defs.svg#icon-instagram-2"></use>
                                 </svg>
                             </a>
                         </li>
-                        <li class="teachers-socials-item">
+                        <li class="teachers__socials-item">
                             <a
                                 href=""
-                                class="teachers-socials-link link"
+                                class="teachers__socials-link link"
                             >
-                                <svg class="teachers-socials-icon" width="20" height="20">
+                                <svg class="teachers__socials-icon" width="20" height="20">
                                     <use
                                     href="./images/symbol-defs.svg#icon-twitter"
                                     ></use>
                                 </svg>
                             </a>
                         </li>
-                        <li class="teachers-socials-item">
+                        <li class="teachers__socials-item">
                             <a
                                 href=""
-                                class="teachers-socials-link link"
+                                class="teachers__socials-link link"
                             >
-                                <svg class="teachers-socials-icon" width="20" height="20">
+                                <svg class="teachers__socials-icon" width="20" height="20">
                                     <use
                                     href="./images/symbol-defs.svg#icon-facebook"
                                     ></use>
                                 </svg>
                             </a>
                         </li>
-                        <li class="teachers-socials-item">
+                        <li class="teachers__socials-item">
                             <a
                                 href=""
-                                class="teachers-socials-link link"
+                                class="teachers__socials-link link"
                             >
-                                <svg class="teachers-socials-icon" width="20" height="20">
+                                <svg class="teachers__socials-icon" width="20" height="20">
                                     <use
                                     href="./images/symbol-defs.svg#icon-linkedin"
                                     ></use>
@@ -196,51 +196,51 @@
                </li>
                <li class="list teachers__item"> 
                   <img src="./images/img-2.jpg" alt="женщина в очках" width="270" >
-                  <div class="workers-names-type">
-                     <h3 class="workers title">Ольга Репина</h3>
+                  <div class="teachers__item-names">
+                     <h3 class="teachers__item-names-title title">Ольга Репина</h3>
                      <p class="grey workers" lang="en">Frontend Developer</p>
-                     <ul class="teachers-socials-list list">
-                        <li class="teachers-socials-item">
+                     <ul class="teachers__socials-list list">
+                        <li class="teachers__socials-item">
                             <a
                                 href=""
-                                class="teachers-socials-link link"
+                                class="teachers__socials-link link"
                             >
-                                <svg class="teachers-socials-icon" width="20" height="20">
+                                <svg class="teachers__socials-icon" width="20" height="20">
                                     <use
                                         href="./images/symbol-defs.svg#icon-instagram-2"></use>
                                 </svg>
                             </a>
                         </li>
-                        <li class="teachers-socials-item">
+                        <li class="teachers__socials-item">
                             <a
                                 href=""
-                                class="teachers-socials-link link"
+                                class="teachers__socials-link link"
                             >
-                                <svg class="teachers-socials-icon" width="20" height="20">
+                                <svg class="teachers__socials-icon" width="20" height="20">
                                     <use
                                     href="./images/symbol-defs.svg#icon-twitter"
                                     ></use>
                                 </svg>
                             </a>
                         </li>
-                        <li class="teachers-socials-item">
+                        <li class="teachers__socials-item">
                             <a
                                 href=""
-                                class="teachers-socials-link link"
+                                class="teachers__socials-link link"
                             >
-                                <svg class="teachers-socials-icon" width="20" height="20">
+                                <svg class="teachers__socials-icon" width="20" height="20">
                                     <use
                                     href="./images/symbol-defs.svg#icon-facebook"
                                     ></use>
                                 </svg>
                             </a>
                         </li>
-                        <li class="teachers-socials-item">
+                        <li class="teachers__socials-item">
                             <a
                                 href=""
-                                class="teachers-socials-link link"
+                                class="teachers__socials-link link"
                             >
-                                <svg class="teachers-socials-icon" width="20" height="20">
+                                <svg class="teachers__socials-icon" width="20" height="20">
                                     <use
                                     href="./images/symbol-defs.svg#icon-linkedin"
                                     ></use>
@@ -252,51 +252,51 @@
                </li>
                <li class="list teachers__item">
                   <img src="./images/img-1.jpg" alt="человек  улыбается" width="270">
-                  <div class="workers-names-type">
-                     <h3 class="workers title">Николай Тарасов</h3>
+                  <div class="teachers__item-names">
+                     <h3 class="teachers__item-names-title title">Николай Тарасов</h3>
                      <p class="grey workers" lang="en">Marketing</p>
-                     <ul class="teachers-socials-list list">
-                        <li class="teachers-socials-item">
+                     <ul class="teachers__socials-list list">
+                        <li class="teachers__socials-item">
                             <a
                                 href=""
-                                class="teachers-socials-link link"
+                                class="teachers__socials-link link"
                             >
-                                <svg class="teachers-socials-icon" width="20" height="20">
+                                <svg class="teachers__socials-icon" width="20" height="20">
                                     <use
                                         href="./images/symbol-defs.svg#icon-instagram-2"></use>
                                 </svg>
                             </a>
                         </li>
-                        <li class="teachers-socials-item">
+                        <li class="teachers__socials-item">
                             <a
                                 href=""
-                                class="teachers-socials-link link"
+                                class="teachers__socials-link link"
                             >
-                                <svg class="teachers-socials-icon" width="20" height="20">
+                                <svg class="teachers__socials-icon" width="20" height="20">
                                     <use
                                     href="./images/symbol-defs.svg#icon-twitter"
                                     ></use>
                                 </svg>
                             </a>
                         </li>
-                        <li class="teachers-socials-item">
+                        <li class="teachers__socials-item">
                             <a
                                 href=""
-                                class="teachers-socials-link link"
+                                class="teachers__socials-link link"
                             >
-                                <svg class="teachers-socials-icon" width="20" height="20">
+                                <svg class="teachers__socials-icon" width="20" height="20">
                                     <use
                                     href="./images/symbol-defs.svg#icon-facebook"
                                     ></use>
                                 </svg>
                             </a>
                         </li>
-                        <li class="teachers-socials-item">
+                        <li class="teachers__socials-item">
                             <a
                                 href=""
-                                class="teachers-socials-link link"
+                                class="teachers__socials-link link"
                             >
-                                <svg class="teachers-socials-icon" width="20" height="20">
+                                <svg class="teachers__socials-icon" width="20" height="20">
                                     <use
                                     href="./images/symbol-defs.svg#icon-linkedin"
                                     ></use>
@@ -308,51 +308,51 @@
                </li>   
                <li class="list teachers__item">
                   <img src="./images/img.jpg" alt="человек в очках улыбается" width="270" >
-                  <div class="workers-names-type">
-                     <h3 class="workers title">Михаил Ермаков</h3>
+                  <div class="teachers__item-names">
+                     <h3 class="teachers__item-names-title title">Михаил Ермаков</h3>
                      <p class="grey workers" lang="en">UI Designer</p>
-                     <ul class="teachers-socials-list list">
-                        <li class="teachers-socials-item">
+                     <ul class="teachers__socials-list list">
+                        <li class="teachers__socials-item">
                             <a
                                 href=""
-                                class="teachers-socials-link link"
+                                class="teachers__socials-link link"
                             >
-                                <svg class="teachers-socials-icon" width="20" height="20">
+                                <svg class="teachers__socials-icon" width="20" height="20">
                                     <use
                                         href="./images/symbol-defs.svg#icon-instagram-2"></use>
                                 </svg>
                             </a>
                         </li>
-                        <li class="teachers-socials-item">
+                        <li class="teachers__socials-item">
                             <a
                                 href=""
-                                class="teachers-socials-link link"
+                                class="teachers__socials-link link"
                             >
-                                <svg class="teachers-socials-icon" width="20" height="20">
+                                <svg class="teachers__socials-icon" width="20" height="20">
                                     <use
                                     href="./images/symbol-defs.svg#icon-twitter"
                                     ></use>
                                 </svg>
                             </a>
                         </li>
-                        <li class="teachers-socials-item">
+                        <li class="teachers__socials-item">
                             <a
                                 href=""
-                                class="teachers-socials-link link"
+                                class="teachers__socials-link link"
                             >
-                                <svg class="teachers-socials-icon" width="20" height="20">
+                                <svg class="teachers__socials-icon" width="20" height="20">
                                     <use
                                     href="./images/symbol-defs.svg#icon-facebook"
                                     ></use>
                                 </svg>
                             </a>
                         </li>
-                        <li class="teachers-socials-item">
+                        <li class="teachers__socials-item">
                             <a
                                 href=""
-                                class="teachers-socials-link link"
+                                class="teachers__socials-link link"
                             >
-                                <svg class="teachers-socials-icon" width="20" height="20">
+                                <svg class="teachers__socials-icon" width="20" height="20">
                                     <use
                                     href="./images/symbol-defs.svg#icon-linkedin"
                                     ></use>
@@ -473,7 +473,7 @@
                             href=""
                             class="footer-socials-link link"
                         >
-                            <svg class="teachers-socials-icon" width="20" height="20">
+                            <svg class="footer-socials-icon" width="20" height="20">
                             <use
                             href="./images/symbol-defs.svg#icon-twitter"
                             ></use>
