--- a/index.html
+++ b/index.html
@@ -365,76 +365,76 @@
             </ul>
          </div>    
       </section>
-      <section class="main__information-clients section">
+      <section class="clients section">
          <div class="container">
-            <h2 class="work">Постоянные клиенты</h2>
-            <ul class="clients-socials-list list">
-               <li class="clients-socials-item">
+            <h2 class="clients__title">Постоянные клиенты</h2>
+            <ul class="clients__socials-list list">
+               <li class="clients__socials-item">
                   <a
                       href=""
-                      class="clients-socials-link link"
+                      class="clients__socials-link link"
                   >
-                      <svg class="clients-socials-icon" width="106" height="60">
+                      <svg class="clients__socials-icon" width="106" height="60">
                           <use
                           href="./images/symbol-defs.svg#icon-Logo1"
                           ></use>
                       </svg>
                   </a>
               </li>
-               <li class="clients-socials-item">
+               <li class="clients__socials-item">
                   <a
                       href=""
-                      class="clients-socials-link link"
+                      class="clients__socials-link link"
                   >
-                      <svg class="clients-socials-icon" width="106" height="60">
+                      <svg class="clients__socials-icon" width="106" height="60">
                           <use
                           href="./images/symbol-defs.svg#icon-Logo2"
                           ></use>
                       </svg>
                   </a>
               </li>
-               <li class="clients-socials-item">
+               <li class="clients__socials-item">
                   <a
                       href=""
-                      class="clients-socials-link link"
+                      class="clients__socials-link link"
                   >
-                      <svg class="clients-socials-icon" width="106" height="60">
+                      <svg class="clients__socials-icon" width="106" height="60">
                           <use
                           href="./images/symbol-defs.svg#icon-Logo3"
                           ></use>
                       </svg>
                   </a>
               </li>
-               <li class="clients-socials-item">
+               <li class="clients__socials-item">
                   <a
                       href=""
-                      class="clients-socials-link link"
+                      class="clients__socials-link link"
                   >
-                      <svg class="clients-socials-icon" width="106" height="60">
+                      <svg class="clients__socials-icon" width="106" height="60">
                           <use
                           href="./images/symbol-defs.svg#icon-Logo4"
                           ></use>
                       </svg>
                   </a>
               </li>
-               <li class="clients-socials-item">
+               <li class="clients__socials-item">
                   <a
                       href=""
-                      class="clients-socials-link link"
+                      class="clients__socials-link link"
                   >
-                      <svg class="clients-socials-icon" width="106" height="60">
+                      <svg class="clients__socials-icon" width="106" height="60">
                           <use
                           href="./images/symbol-defs.svg#icon-Logo5"
                           ></use>
                       </svg>
                   </a>
               </li>
-              <li class="clients-socials-item">
+              <li class="clients__socials-item">
                   <a
                       href=""
-                      class="clients-socials-link link"
+                      class="clients__socials-link link"
                   >
-                      <svg class="clients-socials-icon" width="106" height="60">
+                      <svg class="clients__socials-icon" width="106" height="60">
                           <use
                           href="./images/symbol-defs.svg#icon-Logo6"
                           ></use>
